--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
