--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-PORT=3000
-SECRET_KEY="puberSECRET46"
-DB_HOST=localhost
-DB_USER=root
-DB_PWD=""
-DB_NAME=puber_db
-PEDATREN_URL="https://api-pedatren.nuruljadid.app"
-PEDATREN_TOKEN=""
+PORT=
+
+SECRET_KEY=
+
+DB_HOST=
+DB_USER=
+DB_PWD=
+DB_NAME=
+
+PEDATREN_URL=
+PEDATREN_TOKEN=
