depend api to db

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,8 @@ services:
     networks:
       - puber-network
     depends_on:
-      - puber-db
+      puber-db:
+        condition: service_healthy
     command: >
       sh -c "npx sequelize db:migrate && npm start"
 
